update docs and readme